--- a/UI/index.html
+++ b/UI/index.html
@@ -21,7 +21,7 @@
             <article class="menu">
                 <ul>
                     <li><a href="signin.html">LOG IN</a></li>
-                    <li><a href="#">REGISTER</a></li>
+                    <li><a href="signup.html">REGISTER</a></li>
                 </ul>
             </article>
             
