added link to signin page on signup form

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -37,7 +37,7 @@
                         <button class="register-button" type="submit">Register</button>
                         <article class="register-block">
                             <p class="has-account">Have an account?</p>
-                        <button  class="green register-button" type="submit">Sign In</button>
+                            <a href="signin.html"><button  class="green register-button" type="submit">Sign In</button></a>
                         </article>
                     </article>
                 </form>
