updated form styles

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -10,20 +10,9 @@
 <body>
     <header>
         <nav>
-            <!-- <article class="menu-icon">
-                <img src="https://img.icons8.com/ios/40/000000/hamburger.png">
-            </article> -->
-
             <article class="logo">
                 <a href="index.html">Booka</a>
             </article>
-
-            <!-- <article class="menu">
-                <ul>
-                    <li><a href="signin.html">LOG IN</a></li>
-                    <li><a href="#">REGISTER</a></li>
-                </ul>
-            </article> -->
         </nav>    
     </header>
     <main id="form-main">
@@ -37,7 +26,7 @@
                         <button type="submit">Log In</button>
                         <article>
                             <p class="has-account">Don't have an account?</p>
-                        <button class="green" type="submit">Sign up</button>
+                            <button class="green  signin"><a href="signup.html">Sign In</a></button>
                         </article>
                     </article>
                 </form>
