--- a/UI/signup.html
+++ b/UI/signup.html
@@ -17,7 +17,7 @@
     </header>
     <main id="form-main">
         <section id="register-form-wrapper">
-                <form action="" id="register-form">
+                <form action="#" id="register-form">
                     <article class="form-content">
                         <label class="register-label" for="fullname">Fullname</label>
                         <input type="text"  class="register-input" id="fullname" autocomplete>
@@ -37,7 +37,7 @@
                         <button class="register-button" type="submit">Register</button>
                         <article class="register-block">
                             <p class="has-account">Have an account?</p>
-                            <a href="signin.html"><button  class="green register-button" type="submit">Sign In</button></a>
+                            <button class="green register-button signin"><a href="signin.html">Sign In</a></button>
                         </article>
                     </article>
                 </form>
