--- a/UI/index.html
+++ b/UI/index.html
@@ -20,8 +20,8 @@
 
             <article class="menu">
                 <ul>
-                    <li><a href="signin.html">LOG IN</a></li>
-                    <li><a href="signup.html">REGISTER</a></li>
+                    <li><a href="signin.html">Log In</a></li>
+                    <li><a href="signup.html">Register</a></li>
                 </ul>
             </article>
             
