fixed modal for meal page

--- a/UI/meal.html
+++ b/UI/meal.html
@@ -31,13 +31,12 @@
     </header>
     <main id="meal-main">
         <section id="meal-wrapper">
-            <article id="add-meal">
-                    <a href="#meal"><button><p>Add Meal<p></button></a>
-            </article>
-            <article class="modal">
-                <article class="modal-container" id="meal">
+                <article id="add-meal">
+                    <a href="#modal" class="modal-open"><button><p>Add Meal<p></button></a>
+                </article>  
+            <article id="modal">
+                <article class="modal-content" id="modal">
                     <form action="#" id="meal-form">
-                            <article class="form-content">
                                 <label class="meal-label" for="meal-name">Meal name</label>
                                 <input type="text"  class="meal-input" id="meal-name" autocomplete>
         
@@ -52,8 +51,24 @@
         
                                 <a href="#"><button class="meal-button" type="submit">Add meal</button><a/>
                                 <a href="#"><button class="meal-button close" type="submit">Close</button><a/>
-                            </article>
                         </form>
+                </article>
+            </article>
+
+            <article id="meal-list">
+                <article id="meal-card">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+                </article>
+                <article id="meal-card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+                </article>
+                <article id="meal-card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+
+                </article>
+                <article id="meal-card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+
                 </article>
             </article>
         </section>
