added mock cards for meal page

--- a/UI/meal.html
+++ b/UI/meal.html
@@ -57,19 +57,53 @@
 
             <article id="meal-list">
                 <article id="meal-card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>
                 </article>
                 <article id="meal-card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>                
                 </article>
                 <article id="meal-card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
-
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>
                 </article>
                 <article id="meal-card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officia sapiente at cum, sint architecto?
-
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>
                 </article>
+                <article id="meal-card">
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png" >
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>                </article>
+                <article id="meal-card">
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png" >
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>                </article>
+                <article id="meal-card">
+                        <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                        <div class="container">
+                          <h4><b>John Doe</b></h4>
+                          <p>Architect & Engineer</p>
+                        </div>
+                </article>
+              
             </article>
         </section>
     </main>
