--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -42,16 +42,55 @@
                         <h2>Total Number Of Orders For Today</h2>
                         <br>
                         <hr>
-                        <p>300</p>
+                        <p>300 Orders</p>
                     </article>
                 </section>
+            
                 <section id="table">
-                    <table>
+                    <table class="board-table" cellspacing="0">
                         <thead>
-
+                            <tr>
+                                <th colspan="2">S/N</th>
+                                <th colspan="2">Order ID</th>
+                                <th colspan="2">Customer Name</th>
+                                <th colspan="2">Order Description</th>
+                                <th colspan="2">&#8358;Price</th>
+                                <th colspan="3">Address</th>
+                            </tr>
                         </thead>
                         <tbody>
-
+                            <tr>
+                                <td colspan="2">1</td>
+                                <td colspan="2">765756</td>
+                                <td colspan="2">John Doe</td>
+                                <td colspan="2">2 plates of eba and efo riro</td>
+                                <td colspan="2">&#8358;1000</td>
+                                <td colspan="3">No 2, Iweka Road, Aba</td>
+                            </tr>
+                            <tr>
+                                    <td colspan="2">2</td>
+                                    <td colspan="2">765756</td>
+                                    <td colspan="2">John Doe</td>
+                                    <td colspan="2">2 plates of eba and efo riro</td>
+                                    <td colspan="2">&#8358;1000</td>
+                                    <td colspan="3">No 2, Iweka Road, Aba</td>
+                            </tr>
+                            <tr>
+                                    <td colspan="2">3</td>
+                                    <td colspan="2">765756</td>
+                                    <td colspan="2">John Doe</td>
+                                    <td colspan="2">2 plates of eba and efo riro</td>
+                                    <td colspan="2">&#8358;1000</td>
+                                    <td colspan="3">No 2, Iweka Road, Aba</td>
+                                </tr>
+                                <tr>
+                                        <td colspan="2">4</td>
+                                        <td colspan="2">765756</td>
+                                        <td colspan="2">John Doe</td>
+                                        <td colspan="2">2 plates of eba and efo riro</td>
+                                        <td colspan="2">&#8358;1000</td>
+                                        <td colspan="3">No 2, Iweka Road, Aba</td>
+                                    </tr>
                         </tbody>
                     </table>
 
