--- a/UI/signin.html
+++ b/UI/signin.html
@@ -23,7 +23,7 @@
                         <input type="text">
                         <label for="password" >Password &#x1F510;</label>
                         <input type="password" name="password" id="">
-                        <button type="submit">Log In</button>
+                        <button class="login"><a href="dashboard.html">Log In</a></button>
                         <article>
                             <p class="has-account">Don't have an account?</p>
                             <button class="green  signin"><a href="signup.html">Sign In</a></button>
