completed meal page functionalities

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer>
-        &#x00A9; 2019
+            Hand-crafted By Afolabi &#x00A9; 2019
     </footer>
     <!-- <script src="js/script.js"></script> -->
 </body>
