--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -36,16 +36,14 @@
             <section id="dashboard-wrapper">
                 <section id="dashboard">
                     <article class="board">
-                        <h2>Total revenue generated today</h2>
-                        <br>
+                        <h2>&#8358;500,000</h2>
                         <hr>
-                        <p>&#8358;500,000</p>
+                        <p>Revenue generated today</p>
                     </article>
                     <article class="board">
-                        <h2>Total number of orders made today</h2>
-                        <br>
+                        <h2>300</h2>
                         <hr>
-                        <p>300 Orders</p>
+                        <p>Orders made today</p>
                     </article>
                 </section>
             
