--- a/UI/meal.html
+++ b/UI/meal.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-            <nav>
+            <nav id="meal-nav">
                 <article class="menu-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                   width="30" height="30"
