--- a/UI/signin.html
+++ b/UI/signin.html
@@ -26,7 +26,7 @@
                         <button class="login"><a href="dashboard.html">Log In</a></button>
                         <article>
                             <p class="has-account">Don't have an account?</p>
-                            <button class="green  signin"><a href="signup.html">Sign In</a></button>
+                            <button class="green  signin"><a href="signup.html">Sign Up</a></button>
                         </article>
                     </article>
                 </form>
