added local images for meal page

--- a/UI/meal.html
+++ b/UI/meal.html
@@ -62,7 +62,7 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                          <img src="img/amala.jpg" >
                         </article>
                         <article class="container">
                           <p>&#8358; 500</p>
@@ -79,7 +79,7 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                            <img src="img/amala.jpg" >
                         </article>
                         <article class="container">
                             <p>&#8358; 500</p>
@@ -95,8 +95,8 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
-                        </article>
+                            <img src="img/amala.jpg" >                     
+                             </article>
                         <article class="container">
                             <p>&#8358; 500</p>
                             <h4><b>Amala and Ewedu</b></h4>
@@ -111,7 +111,23 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                            <img src="img/amala.jpg" >                 
+                          </article>
+                        <article class="container">
+                            <p>&#8358; 500</p>
+                            <h4><b>Amala and Ewedu</b></h4>
+                            <h4>Tasty</h4>
+                            <article class="options">
+                                <a href="#modal"><button class="edit">Edit</button></a>
+                                <button class="delete">Delete</button>
+                            </article>
+                        </article>
+                    </article>
+                </article>
+                <article id="meal-card">
+                    <article id="meal-details">
+                        <article class="card-img">
+                            <img src="img/amala.jpg" >
                         </article>
                         <article class="container">
                             <p>&#8358; 500</p>
@@ -127,7 +143,7 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                            <img src="img/amala.jpg" >
                         </article>
                         <article class="container">
                             <p>&#8358; 500</p>
@@ -143,23 +159,7 @@
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
-                        </article>
-                        <article class="container">
-                            <p>&#8358; 500</p>
-                            <h4><b>Amala and Ewedu</b></h4>
-                            <h4>Tasty</h4>
-                            <article class="options">
-                                <a href="#modal"><button class="edit">Edit</button></a>
-                                <button class="delete">Delete</button>
-                            </article>
-                        </article>
-                    </article>
-                </article>
-                <article id="meal-card">
-                    <article id="meal-details">
-                        <article class="card-img">
-                          <img src="https://img.icons8.com/wired/100/000000/rice-bowl.png">
+                            <img src="img/amala.jpg" >
                         </article>
                         <article class="container">
                             <p>&#8358; 500</p>
