--- a/UI/meal.html
+++ b/UI/meal.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li><a href="meal.html">Meal</a></li>
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                         <li><a href="index.html">Log Out</a></li>
                     </ul>
                 </article>
@@ -92,6 +92,7 @@
                         </article>
                     </article>
                 </article>
+                
                 <article id="meal-card">
                     <article id="meal-details">
                         <article class="card-img">
