added clear cart functionality on checkout

--- a/UI/menu.html
+++ b/UI/menu.html
@@ -52,8 +52,8 @@
                             <tr class="band total-row">
                                 <td id="cart-row"><strong class="cart-total-title">Total</strong></td>
                                 <td id="cart-row"><span class="cart-total-price">&#8358; 0</span></td>
-                                <td id="cart-row" ><button class="btn btn-primary buy" type="button"><img src="https://img.icons8.com/windows/25/000000/checkout.png"></button></td>
-                                <td id="cart-row" ><a href="#"><button class="btn btn-primary close" type="button">close</button></a></td>
+                                <td id="cart-row" ><button class="buy" type="button"><img src="https://img.icons8.com/windows/25/000000/checkout.png"></button></td>
+                                <td id="cart-row" ><a href="#"><button class="close" type="button">close</button></a></td>
                             </tr>
                         </tbody>
                     </table>
