--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="#">Dashboard</a></li>
                         <li><a href="meal.html">Meal</a></li>
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                         <li><a href="index.html">Log Out</a></li>
                     </ul>
                 </article>
