--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -23,11 +23,12 @@
     
                 <article class="menu">
                     <ul>
-                        <li><a href="#">Dashboard</a></li>
+                        <li><a href="dashboard.html">Dashboard</a></li>
                         <li><a href="meal.html">Meal</a></li>
                         <li><a href="menu.html">Menu</a></li>
+                        <li><a href="orders.html">Orders</a></li>
                         <li><a href="index.html">Log Out</a></li>
-                    </ul>
+                      </ul>
                 </article>
                 
             </nav>
