--- a/UI/meal.html
+++ b/UI/meal.html
@@ -26,8 +26,9 @@
                         <li><a href="dashboard.html">Dashboard</a></li>
                         <li><a href="meal.html">Meal</a></li>
                         <li><a href="menu.html">Menu</a></li>
+                        <li><a href="orders.html">Orders</a></li>
                         <li><a href="index.html">Log Out</a></li>
-                    </ul>
+                      </ul>
                 </article>
                 
             </nav>
