made order page mobile-friendly

--- a/UI/orders.html
+++ b/UI/orders.html
@@ -9,58 +9,27 @@
   </head>
   <body>
     <header>
-      <nav id="meal-nav">
-        <article class="menu-icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="30"
-            height="30"
-            viewBox="0 0 224 224"
-            style=" fill:#000000;"
-          >
-            <g
-              fill="none"
-              fill-rule="nonzero"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <path d="M0,224v-224h224v224z" fill="none"></path>
-              <g fill="#ffffff">
-                <g id="surface1">
-                  <path
-                    d="M62.72,26.88c-29.2075,0 -52.7975,23.2225 -53.62,52.22l-8.26,11.48c-1.3825,1.9775 -0.9625,4.7075 0.98,6.16c2.2575,1.6975 4.655,3.01 7.14,4.06v18.2c-5.355,3.0975 -8.96,8.7675 -8.96,15.4c0,6.6325 3.605,12.3025 8.96,15.4v24.92c0,12.3025 10.0975,22.4 22.4,22.4h161.28c12.3025,0 22.4,-10.0975 22.4,-22.4v-24.92c5.355,-3.0975 8.96,-8.7675 8.96,-15.4c0,-6.6325 -3.605,-12.3025 -8.96,-15.4v-17.78c2.8525,-1.085 5.565,-2.555 8.12,-4.48c0.945,-0.7175 1.575,-1.785 1.7325,-2.975c0.1575,-1.19 -0.1575,-2.38 -0.8925,-3.325l-9.1,-11.48c-0.91,-28.9275 -24.465,-52.08 -53.62,-52.08zM62.72,35.84h98.56c23.415,0 42.315,17.535 44.52,40.32h-187.6c2.205,-22.785 21.105,-40.32 44.52,-40.32zM78.4,40.32c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM56,44.8c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM69.44,58.24c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM15.82,85.12h192.5l5.32,6.72c-8.505,4.2875 -18.3925,3.71 -26.32,-2.24c-1.435,-1.0675 -3.36,-1.1725 -4.9,-0.28l-7.14,4.06c-0.0525,0 -0.0875,0 -0.14,0c-8.5225,5.04 -18.3225,4.9525 -26.32,0c-0.0525,0 -0.0875,0 -0.14,0l-7.14,-4.06c-1.295,-0.735 -2.87,-0.7875 -4.2,-0.14l-13.3,6.72h-0.14c-7.2275,3.3775 -15.5925,3.3775 -22.82,0h-0.14l-13.3,-6.72c-1.33,-0.6475 -2.905,-0.595 -4.2,0.14l-7.28,4.06c-8.5225,5.04 -18.3225,4.9525 -26.32,0c-0.0525,0 -0.0875,0 -0.14,0l-7.14,-4.06c-1.54,-0.8925 -3.465,-0.7875 -4.9,0.28c-7.9975,6.0025 -18.0425,6.51 -26.6,2.1zM40.18,98.14l5.04,2.8l-0.14,0.14c10.815,6.7025 24.3775,6.615 35.56,0l5.04,-2.8l11.34,5.6c0.0525,0.0525 0.0875,0.0875 0.14,0.14c9.7125,4.6025 20.9475,4.6025 30.66,0c0.0525,-0.0525 0.0875,-0.0875 0.14,-0.14l11.34,-5.6l4.9,2.8h0.14c10.7975,6.6325 24.1325,6.58 35.28,0l5.04,-2.94c6.5625,4.0425 14.0875,5.6875 21.42,5.04v13.3h-188.16v-13.3c7.595,0.8925 15.4175,-0.8225 22.26,-5.04zM17.92,125.44h188.16c5.3375,0 8.96,3.6225 8.96,8.96c0,5.3375 -3.6225,8.96 -8.96,8.96h-188.16c-5.3375,0 -8.96,-3.6225 -8.96,-8.96c0,-5.3375 3.6225,-8.96 8.96,-8.96zM17.92,152.32h188.16v22.4c0,7.42 -6.02,13.44 -13.44,13.44h-161.28c-7.42,0 -13.44,-6.02 -13.44,-13.44z"
-                  ></path>
-                </g>
-              </g>
-            </g>
-          </svg>
-        </article>
-
-        <article class="logo">
-          Booka
-        </article>
-        <article class="menu">
-          <ul>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="meal.html">Meal</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="orders.html">Orders</a></li>
-            <li><a href="index.html">Log Out</a></li>
-          </ul>
-        </article>
-      </nav>
+            <nav id="meal-nav">
+                <article class="menu-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                    width="30" height="30"
+                    viewBox="0 0 224 224"
+                    style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,224v-224h224v224z" fill="none"></path><g fill="#ffffff"><g id="surface1"><path d="M62.72,26.88c-29.2075,0 -52.7975,23.2225 -53.62,52.22l-8.26,11.48c-1.3825,1.9775 -0.9625,4.7075 0.98,6.16c2.2575,1.6975 4.655,3.01 7.14,4.06v18.2c-5.355,3.0975 -8.96,8.7675 -8.96,15.4c0,6.6325 3.605,12.3025 8.96,15.4v24.92c0,12.3025 10.0975,22.4 22.4,22.4h161.28c12.3025,0 22.4,-10.0975 22.4,-22.4v-24.92c5.355,-3.0975 8.96,-8.7675 8.96,-15.4c0,-6.6325 -3.605,-12.3025 -8.96,-15.4v-17.78c2.8525,-1.085 5.565,-2.555 8.12,-4.48c0.945,-0.7175 1.575,-1.785 1.7325,-2.975c0.1575,-1.19 -0.1575,-2.38 -0.8925,-3.325l-9.1,-11.48c-0.91,-28.9275 -24.465,-52.08 -53.62,-52.08zM62.72,35.84h98.56c23.415,0 42.315,17.535 44.52,40.32h-187.6c2.205,-22.785 21.105,-40.32 44.52,-40.32zM78.4,40.32c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM56,44.8c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM69.44,58.24c-3.71,0 -6.72,3.01 -6.72,6.72c0,3.71 3.01,6.72 6.72,6.72c3.71,0 6.72,-3.01 6.72,-6.72c0,-3.71 -3.01,-6.72 -6.72,-6.72zM15.82,85.12h192.5l5.32,6.72c-8.505,4.2875 -18.3925,3.71 -26.32,-2.24c-1.435,-1.0675 -3.36,-1.1725 -4.9,-0.28l-7.14,4.06c-0.0525,0 -0.0875,0 -0.14,0c-8.5225,5.04 -18.3225,4.9525 -26.32,0c-0.0525,0 -0.0875,0 -0.14,0l-7.14,-4.06c-1.295,-0.735 -2.87,-0.7875 -4.2,-0.14l-13.3,6.72h-0.14c-7.2275,3.3775 -15.5925,3.3775 -22.82,0h-0.14l-13.3,-6.72c-1.33,-0.6475 -2.905,-0.595 -4.2,0.14l-7.28,4.06c-8.5225,5.04 -18.3225,4.9525 -26.32,0c-0.0525,0 -0.0875,0 -0.14,0l-7.14,-4.06c-1.54,-0.8925 -3.465,-0.7875 -4.9,0.28c-7.9975,6.0025 -18.0425,6.51 -26.6,2.1zM40.18,98.14l5.04,2.8l-0.14,0.14c10.815,6.7025 24.3775,6.615 35.56,0l5.04,-2.8l11.34,5.6c0.0525,0.0525 0.0875,0.0875 0.14,0.14c9.7125,4.6025 20.9475,4.6025 30.66,0c0.0525,-0.0525 0.0875,-0.0875 0.14,-0.14l11.34,-5.6l4.9,2.8h0.14c10.7975,6.6325 24.1325,6.58 35.28,0l5.04,-2.94c6.5625,4.0425 14.0875,5.6875 21.42,5.04v13.3h-188.16v-13.3c7.595,0.8925 15.4175,-0.8225 22.26,-5.04zM17.92,125.44h188.16c5.3375,0 8.96,3.6225 8.96,8.96c0,5.3375 -3.6225,8.96 -8.96,8.96h-188.16c-5.3375,0 -8.96,-3.6225 -8.96,-8.96c0,-5.3375 3.6225,-8.96 8.96,-8.96zM17.92,152.32h188.16v22.4c0,7.42 -6.02,13.44 -13.44,13.44h-161.28c-7.42,0 -13.44,-6.02 -13.44,-13.44z"></path></g></g></g></svg>
+                </article>
+    
+                <article class="logo">
+                    Booka
+                </article>
+                <article class="menu">
+                    <ul>
+                        <li><a href="dashboard.html">Dashboard</a></li>
+                        <li><a href="meal.html">Meal</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="orders.html">Orders</a></li>
+                        <li><a href="index.html">Log Out</a></li>
+                        </ul>
+                </article>
+            </nav>
     </header>
     <main id="order-main">
       <section id="order-wrapper">
