updated dashboard and menu page theme

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -36,12 +36,12 @@
     <main id="dashboard-main">
             <section id="dashboard-wrapper">
                 <section id="dashboard">
-                    <article class="board">
+                    <article class="board board-revenue">
                         <h2>&#8358;500,000</h2>
                         <hr>
                         <p>Revenue generated today</p>
                     </article>
-                    <article class="board">
+                    <article class="board board-orders">
                         <h2>300</h2>
                         <hr>
                         <p>Orders made today</p>
