--- a/UI/orders.html
+++ b/UI/orders.html
@@ -34,7 +34,7 @@
     <main id="order-main">
       <section id="order-wrapper">
         <article id="order-board">
-          <table>
+          <table id="order-table">
             <thead>
               <tr>
                 <th>Meal Decription</th>
