updated meal page theme

--- a/UI/menu.html
+++ b/UI/menu.html
@@ -91,8 +91,8 @@
                                 </div>
                             </div>  
         
-                            <a href="#"><button class="menu-button" type="submit">Save Changes</button><a/>
-                            <a href="#"><button class="menu-button close" type="submit">Close</button><a/>
+                            <a href="#"><button class="menu-button confirm" type="submit">Save Changes</button><a/>
+                            <a href="#"><button class="menu-button cancel" type="submit">Close</button><a/>
                         </form>
                 </article>
             </article>
