updated styles for templates

--- a/UI/meal.html
+++ b/UI/meal.html
@@ -53,8 +53,8 @@
                                 <label  class="meal-label" for="image">Add Image</label>
                                 <input class="meal-input"type="file" id="image">
         
-                                <a href="#"><button class="meal-button" type="submit">Add meal</button><a/>
-                                <a href="#"><button class="meal-button close" type="submit">Close</button><a/>
+                                <a href="#"><button class="meal-button confirm" type="submit">Add meal</button><a/>
+                                <a href="#"><button class="meal-button cancel" type="submit">Close</button><a/>
                         </form>
                 </article>
             </article>
