--- a/UI/orders.html
+++ b/UI/orders.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Booka</title>
   </head>
-  <body>
+  <body id="order-body">
     <header>
             <nav id="meal-nav">
                 <article class="menu-icon">
