--- a/UI/signin.html
+++ b/UI/signin.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Booka</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <article class="logo">
-                <a href="index.html">Booka</a>
-            </article>
-        </nav>    
+      <nav>
+        <article class="logo">
+          <a href="index.html">Booka</a>
+        </article>
+      </nav>
     </header>
     <main id="form-main">
-        <section id="form-wrapper">
-                <form action="">
-                    <article class="form-content">
-                        <label for="username">Username</label>
-                        <input type="text">
-                        <label for="password" >Password &#x1F510;</label>
-                        <input type="password" name="password" id="">
-                        <button class="login"><a href="dashboard.html">Log In</a></button>
-                        <article>
-                            <p class="has-account">Don't have an account?</p>
-                            <button class="green  signin"><a href="signup.html">Sign Up</a></button>
-                        </article>
-                    </article>
-                </form>
-        </section>
+      <section id="form-wrapper">
+        <form action="">
+          <article class="form-content">
+            <label for="username">Username</label>
+            <input type="text" />
+            <label for="password">Password &#x1F510;</label>
+            <input type="password" name="password" id="" />
+            <button class="login"><a href="dashboard.html">Log In</a></button>
+            <article class="signin">
+              <p class="has-account">Don't have an account?</p>
+              <a href="signup.html">Sign Up</a>
+            </article>
+          </article>
+        </form>
+      </section>
     </main>
     <footer>
-            Hand-crafted By Afolabi &#x00A9; 2019
+      Hand-crafted By Afolabi &#x00A9; 2019
     </footer>
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
