--- a/UI/signup.html
+++ b/UI/signup.html
@@ -1,51 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Booka</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <article class="logo register-logo">
-                <a href="index.html">Booka</a>
-            </article>
-        </nav>    
+      <nav>
+        <article class="logo register-logo">
+          <a href="index.html">Booka</a>
+        </article>
+      </nav>
     </header>
     <main id="form-main">
-        <section id="register-form-wrapper">
-                <form action="#" id="register-form">
-                    <article class="form-content">
-                        <label class="register-label" for="fullname">Fullname</label>
-                        <input type="text"  class="register-input" id="fullname" autocomplete>
+      <section id="register-form-wrapper">
+        <form action="#" id="register-form">
+          <article class="form-content">
+            <label class="register-label" for="fullname">Fullname</label>
+            <input
+              type="text"
+              class="register-input"
+              id="fullname"
+              autocomplete
+            />
 
-                        <label class="register-label" for="email">Email Address</label>
-                        <input type="email" class="register-input" id="email" autocomplete>
+            <label class="register-label" for="email">Email Address</label>
+            <input
+              type="email"
+              class="register-input"
+              id="email"
+              autocomplete
+            />
 
-                        <label class="register-label" for="phone">Phone Number</label>
-                        <input type="number" min="0" max="9" class="register-input" id="pnone" autocomplete>
+            <label class="register-label" for="phone">Phone Number</label>
+            <input
+              type="number"
+              min="0"
+              max="9"
+              class="register-input"
+              id="pnone"
+              autocomplete
+            />
 
-                        <label  class="register-label" for="username">Username</label>
-                        <input class="register-input"type="text" id="username">
+            <label class="register-label" for="username">Username</label>
+            <input class="register-input" type="text" id="username" />
 
-                        <label  class="register-label" for="password" >Password &#x1F510;</label>
-                        <input type="password"  class="register-input" name="password" id="password">
+            <label class="register-label" for="password"
+              >Password &#x1F510;</label
+            >
+            <input
+              type="password"
+              class="register-input"
+              name="password"
+              id="password"
+            />
 
-                        <button class="register-button" type="submit">Register</button>
-                        <article class="register-block">
-                            <p class="has-account">Have an account?</p>
-                            <button class="green register-button signin"><a href="signin.html">Sign In</a></button>
-                        </article>
-                    </article>
-                </form>
-        </section>
+            <button class="register-button" type="submit">Register</button>
+            <article class="register-block">
+              <p class="has-account">Have an account?</p>
+              <a href="signin.html">Sign In</a>
+            </article>
+          </article>
+        </form>
+      </section>
     </main>
     <footer>
-            Hand-crafted By Afolabi &#x00A9; 2019
+      Hand-crafted By Afolabi &#x00A9; 2019
     </footer>
     <!-- <script src="js/script.js"></script> -->
-</body>
+  </body>
 </html>
